logs/gluino.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Gluino-0.4.egg-info'...
Listing './lib/python3.5/site-packages/gluino'...
Compiling './lib/python3.5/site-packages/gluino/__init__.py'...
***   File "./lib/python3.5/site-packages/gluino/__init__.py", line 37
    except HTTP, http:
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/cache.py'...
***   File "./lib/python3.5/site-packages/gluino/cache.py", line 208
    except BaseException, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/custom_import.py'...
***   File "./lib/python3.5/site-packages/gluino/custom_import.py", line 131
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/dal.py'...
***   File "./lib/python3.5/site-packages/gluino/dal.py", line 677
    raise RuntimeError, "driver %s not available" % request_driver
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/highlight.py'...
***   File "./lib/python3.5/site-packages/gluino/highlight.py", line 53
    raise SyntaxError, 'Unknown mode: %s' % mode
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/html.py'...
***   File "./lib/python3.5/site-packages/gluino/html.py", line 36
    entitydefs = dict(map(lambda (k,v): (k, unichr(v).encode('utf-8')), name2codepoint.iteritems()))
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/portalocker.py'...
***   File "./lib/python3.5/site-packages/gluino/portalocker.py", line 127
    raise RuntimeError, "invalid LockedFile(...,mode)"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/sqlhtml.py'...
***   File "./lib/python3.5/site-packages/gluino/sqlhtml.py", line 48
    raise RuntimeError, "field representation must take 1 or 2 args"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/storage.py'...
***   File "./lib/python3.5/site-packages/gluino/storage.py", line 153
    raise SyntaxError, 'setting key \'%s\' does not exist' % key
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/template.py'...
***   File "./lib/python3.5/site-packages/gluino/template.py", line 859
    raise SyntaxError, "Must specify a stream or filename or content"
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/utils.py'...
***   File "./lib/python3.5/site-packages/gluino/utils.py", line 44
    raise RuntimeError, "simple_hash with digest_alg=None"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gluino/validators.py'...
***   File "./lib/python3.5/site-packages/gluino/validators.py", line 227
    exec '__ret__=' + self.expression in self.environment
                  ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/gluino/wrapper.py'...
***   File "./lib/python3.5/site-packages/gluino/wrapper.py", line 27
    except HTTP, e:
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
